chore: bump to version 1.0.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sro-correios",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "JavaScript library for tracking orders through Correios (BR)",
   "main": "dist/index.js",
   "types": "index.d.ts",
@@ -9,18 +9,18 @@
   },
   "prepublish": "tsc",
   "keywords": [
-    "Rastreio",
-    "Correios",
-    "Rastrear Correios",
-    "Brasil",
-    "Correios Brasil",
-    "Encomendas",
-    "Api Correios",
-    "Rastreamento",
-    "rastreio de pacotes",
+    "correios",
+    "rastreio",
+    "brasil",
+    "rastrear correios",
+    "encomendas",
+    "correios brasil",
+    "rastreamento",
     "sro",
-    "correio",
     "tracking",
+    "api correios",
+    "correio",
+    "rastreio de pacotes",
     "track"
   ],
   "repository": {
